OO-1181 portfolion ikonien näkyvyys julkaistuna - Right aligned component edit and visibility buttons. - Fixed layout of action buttons in full text field edit mode. - Fixed a problem with public portfolio view crashing when there were no visible full text fields. - Hid the settings button in preview/public view.

--- a/main/src/scss/opintoni/_component-header.scss
+++ b/main/src/scss/opintoni/_component-header.scss
@@ -21,9 +21,10 @@
   align-items: center;
 
   .component-header__actions {
+    text-align: right;
     margin-left: auto;
     font-size: 1.2em;
-    min-width: 92px;
+    min-width: 96px;
 
     > * {
       margin-left: 1em;
